2007-28-01  Richard Dale  <rdale@foton.es>

	* Commented out the QMetaObject.InvokeMethod() call in the pong.cs
	  example as it causes a crash
	* Fixed bug where the name of a slot was being lost when passed to
	  Invoke slot as a temporary 'const char *' that was being deleted
	  before it could be used.
	* In the C# to C++ list marshaller the temporary list of 'void*'s
	  was not being deleted. If a C++ list element instance aleady has
	  a mapping onto a C# instance, then use that.
	* Added a Q_PROPERTY atttribute to C# properties, restored Q_SLOT
	  properties which were not being generated from slots labelled
	  Q_SLOTS.

2007-26-01  Richard Dale  <rdale@foton.es>

	* Added the qdbus/listnames example
	* Added the qdbus/pingpong example
	* When the type signature of a slot was being derived from the types of
	  the C# arguments, a C# string should map onto 'QString' and not 'string'

2007-25-01  Richard Dale  <rdale@foton.es>

	* QObject.Emit is now a property, rather than a method. For example:

		protected new ICannonFieldSignals Emit {
			get {
				return (ICannonFieldSignals) Q_EMIT;
			}
		}

		...

		Emit.forceChanged(currentForce);

	* Only add C# set properties for Q_PROPERTYs with a WRITE option
	* Added cannon game tutorial t12
	* Added tutorials t13 and t14
	* QWidget.SizeHint is no longer a property as it needs to be overriden in
	  subclasses.

2007-24-01  Richard Dale  <rdale@foton.es>

	* Q_PROPERTYs are now mapped onto C# properties, and the correponding set
	  and get methods removed from the api
	* QDomNodeList is no longer an ArrayList type
	* Added QList<QRgb> as a C# List<uint> type
	* QVariant.Value() and QVariant.FromValue() now work correctly with enums
	* The Enums in properties are now fully qualified with the classname
	* Fixed up the code for the t11 example
	* Added some more CMakeLists.txt files
	* Implemented callbacks to construct QVariants and to get values via