@@ -1,3 +1,3 @@
 SET(SRC_CS listnames.cs)
-ADD_CUSTOM_TARGET (listnames.exe ${GMCS_PATH} -unsafe -warn:0 -out:listnames.exe -addmodule:../../../qt-dotnet.dll ${SRC_CS})
+ADD_CUSTOM_TARGET (listnames.exe ${GMCS_PATH} -unsafe -warn:0 -out:listnames.exe -r:../../../qt-dotnet.dll ${SRC_CS})
 
