@@ -1,6 +1,6 @@
 SET(SRC_CS_PING ping.cs)
-ADD_CUSTOM_TARGET (ping.exe ${GMCS_PATH} -unsafe -warn:0 -out:ping.exe -addmodule:../../../qt-dotnet.dll ${SRC_CS_PING})
+ADD_CUSTOM_TARGET (ping.exe ${GMCS_PATH} -unsafe -warn:0 -out:ping.exe -r:../../../qt-dotnet.dll ${SRC_CS_PING})
 
 SET(SRC_CS_PONG pong.cs)
-ADD_CUSTOM_TARGET (pong.exe ${GMCS_PATH} -unsafe -warn:0 -out:pong.exe -addmodule:../../../qt-dotnet.dll ${SRC_CS_PONG})
+ADD_CUSTOM_TARGET (pong.exe ${GMCS_PATH} -unsafe -warn:0 -out:pong.exe -r:../../../qt-dotnet.dll ${SRC_CS_PONG})
 
